--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
     <head>
-        <title>Threees Cahaya Rubber</title>
+        <title>Therees Cahaya Rubber</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="keywords">
         <meta content="" name="description">
@@ -45,7 +45,7 @@
         <div class="container-fluid position-relative p-0">
             <nav class="navbar navbar-expand-lg navbar-light bg-white px-4 px-lg-5 py-3 py-lg-0">
                 <a href="index.html" class="navbar-brand p-0">
-                    <h1 class="text-primary m-0"><img src="imgs/logo.png" alt="Logo"></i>Threees Cahaya Rubber</h1>
+                    <h1 class="text-primary m-0"><img src="imgs/logo.png" alt="Logo"></i>Therees Cahaya Rubber</h1>
                     <!-- <img src="img/logo.png" alt="Logo"> -->
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -82,7 +82,6 @@
                             <div class="about-img-inner">
                                 <img src="imgs/logo.png" class="img-fluid rounded-circle w-100 h-100" alt="Image">
                             </div>
-                            <div class="about-experience">Pengalaman 5 tahun</div>
                         </div>
                     </div>
                     <div class="col-lg-7 wow fadeInRight" data-wow-delay="0.4s">
@@ -91,12 +90,12 @@
                             <h1 class="display-3 mb-4">Kami siap menyediakan berbagai kebutuhan produk karet rubber Anda.</h1>
                             <p class="mb-4">PT. THEREES CAHAYA RUBBER berdiri sejak tahun 2019. Kami bergerak di bidang perdagangan dan souvenir rubber. Seiring dengan perkembangan zaman, perusahaan terus berinovasi dan memfokuskan di bidang tersebut untuk semakin mempermudah kebutuhan konsumen serta mengimbangi kebutuhan konsumen dengan pelayanan dan kualitas terbaik.</p>
                             <div class="mb-4">
-                                <p class="text-secondary"><i class="fa fa-check text-primary me-2"></i> Pembuatan Karet Rubber</p>
-                                <p class="text-secondary"><i class="fa fa-check text-primary me-2"></i> Pemmbuatan Souvenir</p>
-                                <p class="text-secondary"><i class="fa fa-check text-primary me-2"></i> Pembuatan Aksesoris</p>
-                                <p class="text-secondary"><i class="fa fa-check text-primary me-2"></i> Pembuatan Emblem Logo</p>
+                                <p class="text-primary"><i class="fa fa-check text-primary me-2"></i> Pembuatan Karet Rubber</p>
+                                <p class="text-primary"><i class="fa fa-check text-primary me-2"></i> Pemmbuatan Souvenir</p>
+                                <p class="text-primary"><i class="fa fa-check text-primary me-2"></i> Pembuatan Aksesoris</p>
+                                <p class="text-primary"><i class="fa fa-check text-primary me-2"></i> Pembuatan Emblem Logo</p>
                             </div>
-                            <a href="#" class="btn btn-primary rounded-pill text-white py-3 px-5">Cari Tahu Lebih Lanjut</a>
+                            <a href="./service.html" class="btn btn-primary rounded-pill text-white py-3 px-5">Cari Tahu Lebih Lanjut</a>
                         </div>
                     </div>
                 </div>
@@ -112,37 +111,30 @@
                         <div class="footer-item d-flex flex-column">
                             <h4 class="text-white mb-4"><img src="imgs/logo.png" alt="Logo"></i></h4>
                         </p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus dolorem impedit eos autem dolores laudantium quia, qui similique
-                            <div class="d-flex align-items-center">
-                                <i class="fas fa-share fa-2x text-white me-2"></i>
-                                <a class="btn-square btn btn-primary text-white rounded-circle mx-1" href=""><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn-square btn btn-primary text-white rounded-circle mx-1" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn-square btn btn-primary text-white rounded-circle mx-1" href=""><i class="fab fa-instagram"></i></a>
-                                <a class="btn-square btn btn-primary text-white rounded-circle mx-1" href=""><i class="fab fa-linkedin-in"></i></a>
-                            </div>
+                        <p>Bergabunglah bersama kami untuk menciptakan kreatifitas tanpa batas dalam produksi karet rubber berkualitas
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
                             <h4 class="mb-4 text-white">Link Cepat</h4>
-                            <a href=""><i class="fas fa-angle-right me-2"></i> Tentang Kami</a>
+                            <a href="./about.html"><i class="fas fa-angle-right me-2"></i> Tentang Kami</a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
                             <h4 class="mb-4 text-white">Layanan Kami</h4>
-                            <a href=""><i class="fas fa-angle-right me-2"></i> Souvenir</a>
-                            <a href=""><i class="fas fa-angle-right me-2"></i> Aksesoris</a>
-                            <a href=""><i class="fas fa-angle-right me-2"></i> Logo</a>
+                            <a href="./service.html"><i class="fas fa-angle-right me-2"></i> Souvenir</a>
+                            <a href="./service.html"><i class="fas fa-angle-right me-2"></i> Aksesoris</a>
+                            <a href="./service.html"><i class="fas fa-angle-right me-2"></i> Logo</a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
                             <h4 class="mb-4 text-white">Kontak Kami</h4>
-                            <a href=""><i class="fa fa-map-marker-alt me-2"></i> Alamat</a>
-                            <a href=""><i class="fas fa-envelope me-2"></i> Email</a>
-                            <a href=""><i class="fas fa-phone me-2"></i> notelp</a>
-                            <a href="" class="mb-3"><i class="fas fa-print me-2"></i> whatsapp</a>
+                            <a href="https://maps.app.goo.gl/DAfTyHSQcgkPkdjg8" target="_blank"><i class="fas fa-map-marker-alt me-2"></i> Jl. Bobojong No.3, Bojongmanggu 40376</a>
+                            <a href="mailto:threescahayarubber@gmail.com"><i class="fas fa-envelope me-2"></i> threescahayarubber@gmail.com</a>
+                            <a href="https://wa.me/6287782129535" target="_blank"><i class="fas fa-phone me-2"></i> +62 877-8212-9535 </a>
+                            
                         </div>
                     </div>
                 </div>
@@ -155,7 +147,7 @@
             <div class="container">
                 <div class="row g-4 align-items-center">
                     <div class="col-md-6 text-center text-md-start mb-md-0">
-                        <span class="text-white"><a href="#"><i class="fas fa-copyright text-light me-2"></i>Threees Cahaya Rubber</a>, All right reserved.</span>
+                        <span class="text-white"><a href="#"><i class="fas fa-copyright text-light me-2"></i>Therees Cahaya Rubber</a>, All right reserved.</span>
                     </div>
                 </div>
             </div>
